# master-thesis-information-science

./: .gitignore  README.md  analysis.py  analysis_anomaly_detection.py  anomaly_detection_analysis.py  anomaly_detection_qualitative_analysis.py  anomaly_detection_quantitative_analysis.py  anomaly_detection_results.tsv  anomaly_detection_results_hmean.tsv  anomaly_detection_results_mean.tsv  calculate_dataset_statistics.py  cleaning.py  create_anomaly_detection_datasets.py  dataset_sentiment_analysis.py  dataset_statistical_analysis.py  perform_anomaly_detection_topic_modelling.py  prepare_qualtrics_experiment.py  pyproject.toml  qualtrics_base.txt  qualtrics_out.tsv  qualtrics_out_rating.txt  qualtrics_statistical_analysis.py  thunderbird_test.tsv  thunderbird_train.tsv
Adapted-SwissLog/: run.py
datasets_anomaly_detection/: bgl_test.tsv  bgl_train.tsv  thunderbird_train.tsv
survey_data/: qualtrics_out.txt  qualtrics_survey_output_fixed_headers.tsv
trial2/: NTM Trial 1_April 3, 2024_11.03 fixed headers.tsv  NTM Trial 1_April 3, 2024_11.03.tsv  qualtrics_out_rating.txt
