[tool.poetry]
name = "master-thesis-code"
version = "0.1.0"
description = ""
authors = ["Patrick Darwinkel <patrick@darwinkel.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
tqdm = "^4.66.2"
wordninja = "^2.0.0"
scipy = "^1.12.0"
scikit-learn = "^1.4.1.post1"
spacy = "^3.7.4"
bertopic = "^0.16.0"
gensim = "^4.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
