[tool.poetry]
name = "master-thesis-code"
version = "0.1.0"
description = ""
authors = ["Patrick Darwinkel <patrick@darwinkel.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
tqdm = "^4.66.4"
wordninja = "^2.0.0"
scipy = "^1.13.1"
scikit-learn = "^1.4.2"
spacy = "^3.7.4"
bertopic = "^0.16.2"
gensim = "^4.3.2"
matplotlib = "^3.8.4"
seaborn = "^0.13.2"
statsmodels = "^0.14.2"
nltk = "^3.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
